--- a/llamaindex_graphrag.ipynb
+++ b/llamaindex_graphrag.ipynb
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "import os, dotenv\n",
-    "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
+    "\n",
     "dotenv.load_dotenv(\"/workspace/repos/agentic-ai/.env\")"
    ]
   },
@@ -428,9 +428,6 @@
     "    #     section = get_linked_sections(doc.text)\n",
     "    #     pos_ent+=section\n",
     "\n",
-    "    # extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content and the relation to the section in the metadata.\"\n",
-    "    # extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content.\"\n",
-    "    # extract_prompt = f\"Extract sections, rules, acts and laws mentioned in the content (e.g. § 230.503,§ 240.13a-15, ). Return only sections in the content.\"\n",
     "    extract_prompt = \"What sections, rules, acts and laws (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the content? If there are no mentions, return an empty list.\"\n",
     "    \n",
     "    # kg_extractor = SchemaLLMPathExtractor(\n",
@@ -461,7 +458,6 @@
     "\n",
     "    from llama_index.core.indices.property_graph import SimpleLLMPathExtractor\n",
     "\n",
-    "    extract_prompt = \"What sections, rules, acts and laws (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the content? If there are no mentions, return an empty list.\"\n",
     "    kg_extractor = SimpleLLMPathExtractor(\n",
     "        extract_prompt=extract_prompt,\n",
     "        llm=llm,\n",
@@ -469,40 +465,17 @@
     "        num_workers=10,\n",
     "    )\n",
     "\n",
-    "    # NUMBER_OF_ARTICLES = 1090\n",
-    "\n",
-    "    neo_url = \"bolt://localhost:7687\"\n",
-    "    config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000}\n",
-    "    graph_store = Neo4jPropertyGraphStore(\n",
-    "        username=\"neo4j\",\n",
-    "        password=os.getenv(\"NEO4J_PWD\"),\n",
-    "        url=neo_url,\n",
-    "        database=\"neo4j\",\n",
-    "        **config\n",
-    "    )\n",
-    "\n",
-    "    graph_store.structured_query(\n",
-    "        \"\"\"\n",
-    "    MATCH (n) DETACH DELETE n\n",
-    "    \"\"\"\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "    from llama_index.core import PropertyGraphIndex, KnowledgeGraphIndex\n",
-    "    from llama_index.core.node_parser import SentenceSplitter\n",
-    "    vector_index = PropertyGraphIndex.from_documents(documents, #doc_linked\n",
-    "                                                     llm=llm,\n",
-    "                                                     property_graph_store=graph_store, \n",
-    "                                                     embed_model=embed_model, \n",
-    "                                                     kg_extractors=[kg_extractor],\n",
-    "                                                    #  transformations=[SentenceSplitter(chunk_size=500, chunk_overlap=50)],\n",
-    "                                                     show_progress=True)\n",
+    "    graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", password=os.getenv(\"NEO4J_PWD\"), config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000}):\n",
     "    \n",
-    "    # vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model, show_progress=True)\n",
-    "    vector_index.storage_context.persist(persist_dir=persist_dir)\n",
-    "    graph_store.persist(persist_path=persist_dir)\n",
-    "# query_engine = vector_index.as_retriever(similarity_top_k=3)\n",
-    "query_engine = vector_index.as_query_engine(similarity_top_k=5)\n"
+    "\n",
+    "    # clear neo4j db\n",
+    "    neo4j_query()\n",
+    "\n",
+    "\n",
+    "    # from llama_index.core import PropertyGraphIndex, KnowledgeGraphIndex\n",
+    "    # from llama_index.core.node_parser import SentenceSplitter\n",
+    "    query_engine = create_neo4j_graphrag(documents, llm, embed_model, kg_extractor, graph_store, persist_dir, graph_kwargs={}):\n",
+    "    \n"
    ]
   },
   {
