--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,29 +67,21 @@
     "    gc.collect()\n",
     "else:\n",
     "    with open(file_save_path, 'rb') as f:\n",
-    "        transcription = pickle.load(f)\n",
+    "        documents = pickle.load(f)\n",
     "    \n",
     "\n",
-    "    if isinstance(transcription[0], dict):\n",
-    "        documents = [Document(text=chunk[\"text\"]) for chunk in transcription]"
+    "    if isinstance(documents[0], dict):\n",
+    "        documents = [Document(text=chunk[\"text\"]) for chunk in documents]\n",
+    "\n",
+    "    full_doc = \" \".join([doc.text for doc in documents])\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LLMMetadata(context_window=128000, num_output=256, is_chat_model=True, is_function_calling_model=False, model_name='llama3.1:latest', system_role=<MessageRole.SYSTEM: 'system'>)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core import Settings\n",
     "from llama_index.llms.ollama import Ollama\n",
@@ -127,9 +119,25 @@
    "source": [
     "from llama_index.core.response_synthesizers import TreeSummarize\n",
     "summarizer = TreeSummarize(llm=llm, verbose=True)\n",
-    "prompt_summary = \"You are a professional executive of AlphaTrAI. Your job is to summarize this text in great detail from a video transcription. The summary will be distributed to investors and stakeholders, so give a lot of details and examples from the transcription.\"\n",
+    "# prompt_summary = \"You are a professional executive of AlphaTrAI. Your job is to summarize this text in great detail from a video transcription. The summary will be distributed to investors and stakeholders, so give a lot of details and examples from the transcription.\"\n",
+    "prompt_summary = f\"\"\"You are a professional executive at AlphaTrAI. Your job is to summarize the text from a video transcription. The summary will be a memo distributed to investors and stakeholders. Be sure it the memo has the following items:\n",
+    "1. Extract all the names of new hires and their position, and/or new advisors mentioned in the transcription.\n",
+    "2. Create a section to mention the personnel new to AlphaTrAI.\n",
+    "3. Include other highlights and progress made by AlphaTrAI.\n",
+    "4. Ensure the memo and ensure it is factual, optimistic, and any values mention come directly from the text. \n",
     "\n",
-    "response = await summarizer.aget_response(prompt_summary, [doc.text for doc in transcription])"
+    "The transcription is as follows:\\n{full_doc}\"\"\"\n",
+    "\n",
+    "response = await summarizer.aget_response(prompt_summary, [doc.text for doc in documents])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response)"
    ]
   },
   {
@@ -141,69 +149,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_doc = \" \".join([doc.text for doc in documents])\n",
-    "prompt_summary = f\"You are a professional executive at AlphaTrAI. Your job is to summarize the text from a video transcription. The summary will be a memo distributed to investors and stakeholders. Be sure it is factual, optimistic, and containing little information about change. The transcription is as follows:\\n\\n{full_doc}\"\n",
+    "prompt_summary = f\"\"\"You are a professional executive at AlphaTrAI. Your job is to summarize the text from a video transcription. The summary will be a memo distributed to investors and stakeholders. Be sure it the memo has the following items:\n",
+    "1. Extract all the names of new hires and their position, and/or new advisors mentioned in the transcription.\n",
+    "2. Include other highlights and progress made by AlphaTrAI.\n",
+    "3. Ensure the memo is professional, fluid, factual, and optimistic. \n",
+    "\n",
+    "The transcription is as follows:\\n{full_doc}\"\"\"\n",
     "\n",
     "response = llm.complete(prompt_summary, max_tokens=5000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**MEMORANDUM**\n",
-      "\n",
-      "**TO:** Investors and Stakeholders\n",
-      "\n",
-      "**FROM:** AlphaTrAI Executive Team\n",
-      "\n",
-      "**SUBJECT:** Corporate Update and Strategic Initiatives\n",
-      "\n",
-      "We are pleased to provide a summary of our corporate update and strategic initiatives, as presented during a recent video conference.\n",
-      "\n",
-      "**Corporate Update:**\n",
-      "\n",
-      "In the face of an increasingly competitive tech startup landscape, AlphaTrAI has navigated significant challenges over the past 24-36 months. Despite this, we have not only survived but thrived, positioning ourselves for future growth and success. Our major pivot in 2022 involved transitioning from proprietary asset management to tech-enabled services, leveraging our expertise in wealth and asset management across various business areas.\n",
-      "\n",
-      "**Strategic Initiatives:**\n",
-      "\n",
-      "1. **Anchor Advisory Services Acquisition:** We are excited to announce the acquisition of Anchor Advisory Services, a leading provider of professional sales and distribution solutions. This strategic move will enhance our capabilities in serving clients across the front, middle, and back office.\n",
-      "2. **Kaya AI Solution:** Our team has developed Kaya, an AI solution that automates due diligence for private real estate deals, reducing processing time from 10 days to just three days. This innovative technology has significant potential for scaling and expansion into other investment types and industries.\n",
-      "3. **Talent Acquisition:** We have attracted top talent to our organization, including Rob Marsh, a seasoned industry expert with extensive experience in tech-enabled services. This influx of expertise will drive growth and innovation within AlphaTrAI.\n",
-      "\n",
-      "**Growth Prospects:**\n",
-      "\n",
-      "Our pipeline is strong, and we are poised for significant growth in the coming months. With Kaya and other AI solutions in development, we expect to expand our reach into new markets and industries, further solidifying our position as a leader in tech-enabled services.\n",
-      "\n",
-      "**Next Steps:**\n",
-      "\n",
-      "We will continue to refine and expand our product offerings, leveraging the expertise of our team and partners to drive innovation and growth. Our focus on delivering customized SaaS solutions will enable us to differentiate ourselves from competitors and provide unparalleled value to our clients.\n",
-      "\n",
-      "**Conclusion:**\n",
-      "\n",
-      "AlphaTrAI is well-positioned for future success, driven by our commitment to innovation, talent acquisition, and strategic partnerships. We are excited to share this journey with our investors and stakeholders and look forward to achieving significant growth in the coming months.\n",
-      "\n",
-      "Please do not hesitate to contact us if you have any questions or would like to discuss further.\n",
-      "\n",
-      "Sincerely,\n",
-      "\n",
-      "[Your Name]\n",
-      "AlphaTrAI Executive Team\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(response.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "**AlphaTrAI Executive Memo**\n",
+    "\n",
+    "**To:** Investors and Stakeholders\n",
+    "\n",
+    "**From:** [Your Name], Executive at AlphaTrAI\n",
+    "\n",
+    "**Subject:** Corporate Update, New Hires, and Key Progressions\n",
+    "\n",
+    "As we continue to navigate the ever-evolving landscape of tech-enabled services, I am pleased to share with you our recent updates and key progressions.\n",
+    "\n",
+    "**New Hires and Advisors:**\n",
+    "\n",
+    "* **Anjan Jo**: An incredibly talented individual who has joined our advisory committee. She brings a wealth of knowledge and experience, and we are grateful for her continued involvement.\n",
+    "* **Rob Marsh**: A seasoned technology expert who has joined the firm as a member of the executive committee. He brings a deep understanding of tech-enabled services and will play a critical role in shaping our business strategy.\n",
+    "* **Matt Higgins**: Our new chief compliance officer, who will be instrumental in ensuring the responsible application of AI across our clients' businesses.\n",
+    "\n",
+    "**New Personnel:**\n",
+    "\n",
+    "* **Sammy Tarazi**: Our first official CTO, who has brought extraordinary value to the firm with his technical expertise and ability to communicate effectively.\n",
+    "* **John Sweeney**: A highly experienced business professional who has joined us as a key member of our team. He brings a deep understanding of the wealth management industry and will play a critical role in shaping our business strategy.\n",
+    "\n",
+    "**Other Highlights:**\n",
+    "\n",
+    "* We have made significant progress in consolidating our proprietary asset management business, which has allowed us to focus on delivering consultative services to our clients.\n",
+    "* Our pipeline is strong, with multiple SOWs (Statements of Work) already in process. Notably, we are working closely with the Financial Services Institute to explore opportunities for AI adoption and leadership.\n",
+    "* We have established a robust advisory committee, featuring industry legends such as Lonnie Steffens, Kathy Saunders, and Larry Anderson. This will enable us to leverage their expertise and stay ahead of the curve in terms of market trends.\n",
+    "\n",
+    "**Progressions:**\n",
+    "\n",
+    "* Our sales team has achieved remarkable success with Rocco's business, generating over $18 million in revenue. We expect this growth to continue as we integrate Anchor Advisory Services into our platform.\n",
+    "* Our tech-enabled services have seen significant traction, with multiple clients expressing interest in leveraging our capabilities. This includes Stacks Capital, which is integrating Kaya (our AI-powered due diligence tool) into their business processes.\n",
+    "\n",
+    "**Conclusion:**\n",
+    "\n",
+    "We are excited about the progress we've made and the opportunities that lie ahead. We believe that our focus on tech-enabled services will enable us to deliver greater value to our clients and drive growth for the firm.\n",
+    "\n",
+    "Please feel free to reach out with any questions or concerns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "**MEMORANDUM**\n",
+    "\n",
+    "**TO:** Investors and Stakeholders\n",
+    "\n",
+    "**FROM:** AlphaTrAI Executive Team\n",
+    "\n",
+    "**SUBJECT:** Corporate Update and Highlights\n",
+    "\n",
+    "As we continue to navigate the rapidly evolving landscape of tech-enabled services, I am pleased to provide a comprehensive update on our company's progress and highlight key achievements.\n",
+    "\n",
+    "**New to AlphaTrAI?**\n",
+    "\n",
+    "Welcome! If you are new to our community, we encourage you to explore our platform and learn more about our mission to revolutionize the way businesses operate. Our team is committed to transparency and communication, and we invite you to join us on this exciting journey.\n",
+    "\n",
+    "**Key Personnel**\n",
+    "\n",
+    "We would like to take a moment to acknowledge and appreciate the contributions of our talented team members:\n",
+    "\n",
+    "* **Bill**: Executive at AlphaTrAI\n",
+    "* **Steve Rocco**: Founder and CEO of Anchor Advisory Services (recently acquired by AlphaTrAI)\n",
+    "* **Sammy Tarazi**: Chief Technology Officer (CTO) at AlphaTrAI\n",
+    "* **John Sweeney**: Member of the Executive Committee at AlphaTrAI\n",
+    "* **Rob Marsh**: Member of the Executive Committee at AlphaTrAI and former CEO of Kensho\n",
+    "* **Matt Higgins**: Compliance Officer at AlphaTrAI\n",
+    "\n",
+    "**Highlights and Progress**\n",
+    "\n",
+    "We are proud to announce significant milestones in our journey:\n",
+    "\n",
+    "* Acquisition of Anchor Advisory Services, expanding our capabilities in sales and distribution services.\n",
+    "* Appointment of key personnel, including Steve Rocco as CEO of Anchor Advisory Services and Sammy Tarazi as CTO of AlphaTrAI.\n",
+    "* Development of Kaya, a groundbreaking AI-powered due diligence platform for private investments.\n",
+    "* Expansion of our advisory committee with industry legends, including Lonnie Steffens and Kathy Saunders.\n",
+    "\n",
+    "**Other Notable Achievements**\n",
+    "\n",
+    "We have made substantial progress in various areas:\n",
+    "\n",
+    "* Consolidation of our proprietary asset management business to focus on tech-enabled services.\n",
+    "* Establishment of a strong pipeline and successful delivery of sales and distribution services through Anchor Advisory Services.\n",
+    "* Development of customized SaaS deliverables, enabling us to differentiate ourselves from traditional software-as-a-service providers.\n",
+    "\n",
+    "**Conclusion**\n",
+    "\n",
+    "We are thrilled with the progress we have made and look forward to continuing our journey towards innovation and excellence. We invite you to join us on this exciting path, as we strive to revolutionize the way businesses operate through the application of technology and expertise.\n",
+    "...\n",
+    "\n",
+    "Best regards,\n",
+    "[Your Name]\n",
+    "AlphaTrAI Executive Team\n",
+    "Output is truncated. View as a scrollable element or open in a text editor. Adjust cell output settings..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'3200' in full_doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(full_doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "**MEMORANDUM**\n",
+    "\n",
+    "**TO:** Investors and Stakeholders\n",
+    "\n",
+    "**FROM:** [Your Name], Executive at AlphaTrAI\n",
+    "\n",
+    "**SUBJECT:** Corporate Update and Exciting Developments\n",
+    "\n",
+    "We are pleased to provide a summary of our recent video transcription, highlighting key updates and developments within the company.\n",
+    "\n",
+    "**Corporate Update:**\n",
+    "The past 24-36 months have been challenging for tech startups, with over 3,200 closures and a loss of $27 billion in startup capital. Despite this backdrop, we have navigated these difficulties to emerge stronger and more confident in our future prospects. Our pivot to tech-enabled services has been a major success, leveraging our expertise in wealth and asset management to provide consultative services and customized products for clients.\n",
+    "\n",
+    "**Key Developments:**\n",
+    "\n",
+    "1. **Steve Rocco's Business:** Anchor Advisory Services has joined the AlphaTrAI team, bringing a wealth of experience in sales and distribution. With their expertise, we can now offer more comprehensive solutions to our clients.\n",
+    "2. **Rob Marsh's Addition:** Rob has joined our executive committee, bringing his technology background and PM expertise to further enhance our capabilities.\n",
+    "3. **Matt Higgins' Compliance Role:** Matt has taken on the role of Chief Compliance Officer, ensuring that our customers receive the highest level of support in responsible AI application.\n",
+    "4. **Kaya, the Capital Artificial Intelligence Analyst:** Our team has developed an agent-based solution, leveraging large language models and retrieval augmented generations to automate due diligence for private real estate deals. This innovation has reduced processing times from 10 days to just three days.\n",
+    "\n",
+    "**Growth and Expansion:**\n",
+    "\n",
+    "We are excited about our growth prospects, with a strong pipeline and plans to expand our advisory committee with industry legends like Lonnie Steffens and Kathy Saunders. Our branding efforts will ensure that we effectively communicate the value of our tech-enabled services to the market.\n",
+    "\n",
+    "**Conclusion:**\n",
+    "We believe that these developments demonstrate our commitment to innovation and customer satisfaction. We invite you to join us on this exciting journey, as we continue to push the boundaries of what is possible in the world of AI and asset management. Thank you for your continued support!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
