--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -416,7 +416,93 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "asset_list = [\"Vanguard Group\",\t\"BlackRock\",\t\"State Street Global\",\t\"Fidelity Investments\",\t\"BNY Mellon\",\t\"Goldman Sachs Group\",\t\"J.P. Morgan Asset & Wealth\",\t\"Legal & General Investment\",\t\"Wellington Mgmt.\",\t\"Amundi\",\t\"Prudential Financial\",\t\"Geode Capital Mgmt.\",\t\"PIMCO\",\t\"Northern Trust Asset Mgmt.\",\t\"Nuveen\",\t\"Capital Group\",\t\"T. Rowe Price Associates\",\t\"AXA Investment\",\t\"Franklin Templeton\",\t\"Federated Hermes\",\t\"Invescos\",\t\"Dimensional Fund Advisors\",\t\"MetLife Investment Mgmt.\",\t\"Morgan Stanley Inv. Mgmt.\",\t\"New York Life Investments\",\t\"Schroders\",\t\"Principal Global Investors\",\t\"KKR\",\t\"DWS\",\t\"Macquarie Asset Mgmt.\",\t\"Brookfield Asset Mgmt.\",\t\"Allspring Global Investments\",\t\"BNP Paribas Asset Mgmt.\",\t\"Asset Management One\",\t\"Mercer\",\t\"Barings\",\t\"Aegon Asset Mgmt.\",\t\"AllianceBernstein\",\t\"Neuberger Berman\",\t\"Ares Mgmt.\",\t\"Columbia Threadneedle\",\t\"NISA Investment\",\t\"Voya Investment Mgmt.\",\t\"MassMutual\",\t\"Aviva Investors\",\t\"SEI Investments\",\t\"Manulife Investment\",\t\"SLC Management\",\t\"Russell Investments\",\t\"Loomis, Sayles\",\t\"Baillie Gifford Overseas\",\t\"Dodge & Cox\",\t\"TCW Group\",\t\"MFS Investment\",\t\"RBC Global Asset Mgmt.\",\t\"Mesirow\",\t\"Guggenheim Investments\",\t\"Wilmington Trust\",\t\"WTW Investment Services\",\t\"Conning\",\t\"Empower Investments\",\t\"PFM Asset Mgmt.\",\t\"CBRE Investment Mgmt.\",\t\"TD Global Invest. Solutions\",\t\"IFM Investors\",\t\"Arrowstreet Capital\",\t\"Nomura Asset Mgmt.\",\t\"Oaktree Capital\",\t\"Payden & Rygel\",\t\"Lazard Asset Mgmt.\",\t\"Victory Capital\",\t\"Artisan Partners\",\t\"PRIMECAP\",\t\"Man Group\",\t\"Robeco\",\t\"Baird Advisors\",\t\"Hamilton Lane\",\t\"Ninety One\",\t\"Partners Group\",\t\"Starwood Capital\",\t\"AQR Capital Mgmt.\",\t\"Acadian Asset Mgmt.\",\t\"Prologis\",\t\"LSV Asset Mgmt.\",\t\"StepStone Group\",\t\"American Century\",\t\"Charles Schwab Investment\",\t\"RhumbLine Advisers\",\t\"Pathway Capital\",\t\"Boston Partners\",\t\"Record Currency Mgmt.\",\t\"Income Research & Mgmt.\",\t\"AEW Capital\",\t\"Pictet Asset Mgmt.\",\t\"First Sentier Investors\",\t\"Hines\",\t\"New England Asset Mgmt.\",\t\"Alan Biller and Associates\",\t\"PPM America\",\t\"LaSalle Investment\",\t\"GCM Grosvenor\",\t\"PineBridge Investments\",\t\"PNC Financial\",\t\"CC&L Financial Group\",\t\"Fort Washington\",\t\"Dai-ichi Life Holdings\",\t\"Oak Hill Advisors\",\t\"William Blair\",\t\"Putnam Investments\",\t\"Ashmore Group\",\t\"Heitman\",\t\"Harrison Street\",\t\"Grantham, Mayo v. Otterloo\",\t\"PAG\",\t\"Harris Associates\",\t\"Adams Street Partners\",\t\"Sterling Capital\",\t\"GoldenTree Asset Mgmt.\",\t\"Mondrian Investment\",\t\"Angelo, Gordon\",\t\"Nikko Asset Mgmt.\",\t\"Harding Loevner\",\t\"Brown Advisory\",\t\"Portfolio Advisors\",\t\"Fisher Investments\",\t\"Cohen & Steers\",\t\"Marathon-London\",\t\"Harbor Capital Advisors\",\t\"Aristotle Capital Mgmt.\",\t\"SECOR Asset Mgmt.\",\t\"Stockbridge Capital Group\",\t\"PanAgora Asset Mgmt.\",\t\"Pzena Investment\",\t\"Causeway Capital\",\t\"Colchester Global Investors\",\t\"MissionSquare Investments\",\t\"Hayfin Capital Mgmt.\",\t\"ORIX USA\",\t\"CIBC Asset Mgmt.\",\t\"Los Angeles Capital\",\t\"Shenkman Group\",\t\"Jarislowsky Fraser\",\t\"EARNEST Partners\",\t\"Knights of Columbus Asset\",\t\"Strategic Investment Group\",\t\"Commonfund\",\t\"Rockpoint Group\",\t\"Hotchkis & Wiley\",\t\"AAM\",\t\"CIM Group*\",\t\"Beutel, Goodman\",\t\"Nomura Corporate Research\",\t\"Scout Investments\",\t\"Calamos Advisors\",\t\"ACORE Capital\",\t\"PCCP\",\t\"Guardian Capital\",\t\"DuPont Capital\",\t\"Canyon Partners\",\t\"Kayne Anderson Rudnick\",\t\"Polen Capital\",\t\"TA Realty\",\t\"Sustainable Growth Advisers\",\t\"MFG Asset Mgmt.\",\t\"Unigestion\",\t\"Intech\",\t\"Eagle Capital\",\t\"Garcia Hamilton\",\t\"Sprucegrove Investment\",\t\"Longfellow Investment\",\t\"Axiom Investors\",\t\"King Street Capital\",\t\"Wasatch Global Investors\",\t\"Boyd Watterson\",\t\"Champlain Investment\",\t\"Crestline Investors\",\t\"Callan\",\t\"Pacific Asset Mgmt.\",\t\"Fuller & Thaler\",\t\"Cantillon Capital Mgmt.\",\t\"Jacobs Levy Equity\",\t\"Brandes Investment\",\t\"Fayez Sarofim\",\t\"Sit Investment\",\t\"Cliffwater\",\t\"Intercontinental Real Estate\",\t\"Walton Street Capital\",\t\"Beacon Capital\",\t\"Rockwood Capital\",\t\"Breckinridge Capital\",\t\"Beach Point Capital\",\t\"Amalgamated Bank\",\t\"American Realty Advisors\",\t\"Abbott Capital\",\t\"Eagle Asset Mgmt.\",\t\"Westfield Capital\",\t\"Driehaus Capital\",\t\"CenterSquare Investment\",\t\"Segall Bryant & Hamill\",\t\"Polaris Capital\",\t\"Grayscale Investments\",\t\"GW&K Investment\",\t\"CornerStone Partners\",\t\"Westbrook Partners\",\t\"Bahl & Gaynor\",\t\"Sage Advisory Services\",\t\"Yousif Capital\",\t\"Commerce Trust\",\t\"Zacks Investment\",\t\"Stone Harbor Investment\",\t\"Brown Capital\",\t\"Cooke & Bieler\",\t\"L&B Realty\",\t\"Jensen Investment\",\t\"Burgundy Asset Mgmt.\",\t\"Pugh Capital\",\t\"Mill Creek Residential\",\t\"Global Endowment Mgmt.\",\t\"Ullico Investment\",\t\"London Co.\",\t\"GAMCO Investors\",\t\"Matthews Asia\",\t\"Capital Fund Mgmt.\",\t\"Waterfall Asset Mgmt.\",\t\"Westwood Global\",\t\"Frontier Capital\",\t\"Christian Brothers\",\t\"Manning & Napier\",\t\"Ariel Investments\",\t\"Washington Capital\",\t\"TimesSquare Capital\",\t\"Ramirez Asset Mgmt.\",\t\"Altrinsic Global Advisors\",\t\"National Real Estate\",\t\"Advent Capital\",\t\"CS McKee\",\t\"WEDGE Capital\",\t\"Newfleet Asset Mgmt.\",\t\"National Investment\",\t\"TT International\",\t\"Prima Capital Advisors\",\t\"Alger\",\t\"Silver Creek Capital\",\t\"River Road Asset Mgmt.\",\t\"Agincourt Capital\",\t\"Diamond Hill Capital\",\t\"AGF Investments\",\t\"Sentinel Real Estate\",\t\"Ceredex Value Advisors\",\t\"CoreCommodity\",\t\"LCM Partners\",\t\"Madison Realty\",\t\"Silvercrest Asset Mgmt.\",\t\"White Oak Global Advisors\",\t\"Luther King Capital\",\t\"Equus Capital\",\t\"Hardman Johnston Global\",\t\"AFL-CIO Housing Trust\",\t\"Corbin Capital\",\t\"City of London\",\t\"Spider Mgmt.\",\t\"M3 Capital\",\t\"Davis Advisors\",\t\"Torchlight Investors\",\t\"Stephens Inv. Mgmt. Group\",\t\"Great Lakes Advisors\",\t\"Congress Asset Mgmt.\",\t\"Parnassus Investments\",\t\"Dana Investment\",\t\"Martingale Asset Mgmt.\",\t\"Madison Investments\",\t\"Richmond Capital\",\t\"Camden Asset Mgmt.\",\t\"400 Capital Mgmt.\",\t\"Glenmede Investment\",\t\"Lyrical Asset Mgmt.\",\t\"Gramercy\",\t\"D.F. Dent\",\t\"Resource Mgmt.\",\t\"DePrince, Race & Zollo\",\t\"Fiduciary Mgmt./Milwaukee\",\t\"Duff & Phelps\",\t\"AFL-CIO Building Trust\",\t\"Johnson Asset Mgmt.\",\t\"LM Capital Group\",\t\"Conestoga Capital\",\t\"Sierra Investment\",\t\"Baird Equity Asset Mgmt.\",\t\"Forest Investment\",\t\"Carmel Partners\",\t\"Atalanta Sosnoff Capital\",\t\"Jackson Square Partners\",\t\"Peregrine Capital\",\t\"Todd Asset Mgmt.\",\t\"Hoisington Investment\",\t\"GlobeFlex Capital\",\t\"Kornitzer Capital\",\t\"Patron Capital\",\t\"Emerald Advisers\",\t\"Mar Vista Investment\",\t\"Stacey Braun Associates\",\t\"Leading Edge Investment\",\t\"Kennedy Capital\",\t\"Security Capital Research\",\t\"Riverbridge Partners\",\t\"Cardinal Capital\",\t\"Granahan Investment\",\t\"Dolan McEniry\",\t\"Angel Oak Capital\",\t\"Global Forest Partners\",\t\"Channing Capital\",\t\"ClariVest Asset Mgmt.\",\t\"Twin Bridge Capital\",\t\"Evanston Capital\",\t\"Aristotle Capital Boston\",\t\"Systematic Financial\",\t\"Palisade Capital\",\t\"Algert Global\",\t\"Hillsdale Investment\",\t\"Prime Group\",\t\"3650 REIT\",\t\"GTIS Partners\",\t\"Bivium Capital\",\t\"Molpus Woodlands Group\",\t\"Winthrop Capital\",\t\"Zevenbergen Capital\",\t\"Dalton Investments\",\t\"Hood River Capital\",\t\"Trillium Asset Mgmt.\",\t\"Bowen, Hanes\",\t\"EAM Investors\",\t\"Verger Capital\",\t\"GIA Partners\",\t\"Weatherbie Capital\",\t\"Oberweis Asset Mgmt.\",\t\"Zazove Associates\",\t\"Wexford Capital\",\t\"Timberland Inv. Resources\",\t\"Sawgrass Asset Mgmt.\",\t\"SSI Investment\",\t\"NewSouth Capital\",\t\"Foundry Partners\",\t\"Sound Shore Mgmt.\",\t\"KBS\",\t\"HS Management\",\t\"Silvant Capital\",\t\"Millstreet Capital\",\t\"Redwood Investments\",\t\"Genter Capital\",\t\"Smith Group Asset Mgmt.\",\t\"Sarofim Realty\",\t\"Edgar Lomax\",\t\"Covenant Capital Group\",\t\"Heartland Advisors\",\t\"Adelante Capital\",\t\"Rice Hall James\",\t\"Cramer Rosenthal McGlynn\",\t\"Quest Investment\",\t\"Penn Capital\",\t\"Ranger Investments\",\t\"Associated Capital Group\",\t\"Cornerstone Investment\",\t\"Smith Affiliated Capital\",\t\"Logan Capital\",\t\"Wilbanks, Smith & Thomas\",\t\"Orleans Capital\",\t\"Thornburg Investment\",\t\"Karpus Investment\",\t\"StoneRidge PMG Advisors\",\t\"Tributary Capital\",\t\"Mairs & Power\",\t\"Bridgeway Capital\",\t\"Granite Investment\",\t\"Ativo Capital Mgmt.\",\t\"Nicholas Investment\",\t\"Sasco Capital\",\t\"CS Capital\",\t\"TWIN Capital\",\t\"CI Inverness\",\t\"Miller/Howard Investments\",\t\"Belle Haven Investments\",\t\"Montag & Caldwell\",\t\"Anchor Capital\",\t\"Wedgewood Partners\",\t\"Wright Investors' Service\",\t\"Phocas Financial\",\t\"TSCG Investors\",\t\"Pier Capital\",\t\"GLOBALT\",\t\"Van Hulzen Asset Mgmt.\",\t\"SKBA Capital Mgmt.\",\t\"Domain Timber Advisors\",\t\"Speece Thorson Capital\",\t\"Redstone Advisors\",\t\"Aristotle Credit Partners\",\t\"TerraCotta Group\",\t\"Farr, Miller & Washington\",\t\"SouthernSun Asset Mgmt.\",\t\"Gifford Fong Associates\",\t\"Denali Advisors\",\t\"KDP Asset Mgmt.\",\t\"AMI Asset Mgmt.\",\t\"Semper Capital\",\t\"Renaissance Investment\",\t\"ZWJ Investment Counsel\",\t\"Campbell Newman Asset\",\t\"Gateway Investment\",\t\"SMH Capital Advisors\",\t\"Argent Capital\",\t\"Chicago Capital\",\t\"Osborne Partners\",\t\"Oak Associates\",\t\"Windham Capital\",\t\"Bridge City\",\t\"Strategy Asset Managers\",\t\"Kingdon Capital\",\t\"Glovista Investments\",\t\"Winslow Asset Mgmt.\",\t\"Hahn Capital\",\t\"Affinity Investment Advisors\",\t\"Teton Advisors\",\t\"Abner, Herrman & Brock\",\t\"NovaPoint Capital\",\t\"Paradigm Capital\",\t\"Flippin, Bruce & Porter\",\t\"Kestrel Investment\",\t\"Tom Johnson Investment\",\t\"Argus Investors' Counsel\",\t\"Branson, Fowlkes/Russell\",\t\"Robinson Value Mgmt.\",\t\"Chase Investment Counsel\",\t\"Nicholas Co.\",\t\"Cadinha\",\t\"Pacific West Land\",]\n",
+    "import os, re\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "from llama_index.llms.openai import OpenAI as LOpenAI\n",
+    "\n",
+    "model_name, ctx_len = \"gpt-4o-2024-08-06\", 128000\n",
+    "openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "os.environ[\"OPENAI_API_KEY\"] = openai_key\n",
+    "system_prompt = f\"\"\"You are gathering information on the top asset management firms in the world. \n",
+    "This information will be put in a spreadsheet. \n",
+    "You need to know the CEO of each firm.\n",
+    "Return the company name and CEO name in the following format: \"Company: CEO\".\n",
+    "\"\"\"\n",
+    "print(f\"Using OpenAI {model_name}...\")\n",
+    "llm = LOpenAI(model=model_name, max_tokens=8000, system_prompt=system_prompt)\n",
+    "ceos=[]\n",
+    "coos=[]\n",
+    "cios=[]\n",
+    "presidents=[]\n",
+    "execs = [ceos, coos, cios, presidents]\n",
+    "exec_strs = [\"Chief Executive Officer\", \"Chief Operating Officer\", \"Chief Investment Officer\", \"President\"]\n",
+    "results = []\n",
+    "\n",
+    "for i,a in enumerate(asset_list):\n",
+    "    company_execs=[a]\n",
+    "    for exec_type, exec_str in zip(execs, exec_strs):\n",
+    "        system_prompt = f\"\"\"You are gathering information on the executives at top asset management firms. \n",
+    "        Only output the executive's name. \n",
+    "        Here are examples of properly formatted outputs: 'Larry Fink', 'Lori Heinel', 'James S. Anderson', 'Brian Carlin', 'Michael Sacks').\n",
+    "        \n",
+    "        Who is the {exec_str} of {a}?\n",
+    "        \"\"\"\n",
+    "        response = llm.complete(system_prompt)\n",
+    "        # response_check = llm.complete(f\"Extract and only output the name in the following text.\\n\\n{response.text}\")\n",
+    "        company_execs.append(response.text)\n",
+    "        \n",
+    "    # if i==10:\n",
+    "    #     raise ValueError(\"Stop here.\")\n",
+    "    # else:\n",
+    "    #     print(company_execs)\n",
+    "    if i%50==0:\n",
+    "        print(f\"{i} {company_execs}...\")\n",
+    "    results.append(company_execs)\n",
+    "    \n",
+    "header=[[\"Company Name\"]+[\"Chief Executive Officer\", \"Chief Operating Officer\", \"Chief Investment Officer\", \"President\"]]\n",
+    "bads=0\n",
+    "for r in results:\n",
+    "    for elem in r:\n",
+    "        if len(elem.split())>4:\n",
+    "            bads+=1\n",
+    "            print(\" \".join(elem.split()[-3:]))\n",
+    "            break\n",
+    "print(bads)\n",
+    "results=[r[0] for r in results]\n",
+    "for i in range(len(results)):\n",
+    "    for j in range(1,5):\n",
+    "        # results[i][j] = results[i][j].strip().replace(\"'\", \"\")\n",
+    "        # if results[i][j].endswith(\".\"):\n",
+    "        #     results[i][j] = results[i][j][:-1]\n",
+    "        # if results[i][j].endswith(\",\"):\n",
+    "        #     results[i][j] = results[i][j][:-1]\n",
+    "        # if \" \".join(results[i][j].split()[-3:]).startswith(\"is\"):\n",
+    "        #     results[i][j] = \" \".join(results[i][j].split()[-3:])[2:].strip()\n",
+    "        # if \" \".join(results[i][j].split()[-3:]).startswith((\"is\", \"have\", \"and\", \"a different\", \"my\")):\n",
+    "        #     results[i][j] = \" \".join(results[i][j].split()[-3:])[2:].strip()\n",
+    "        if len(results[i][j].split())>4:\n",
+    "            results[i][j] = \" \".join(results[i][j].split()[-3:])[2:].replace('\"', '').strip()\n",
+    "import csv\n",
+    "\n",
+    "# Sample list of lists\n",
+    "\n",
+    "\n",
+    "# Specify the file name\n",
+    "filename = '/workspace/data/asset_execs.csv'\n",
+    "\n",
+    "# Open the file in write mode\n",
+    "with open(filename, 'w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    \n",
+    "    # Write each row to the CSV file\n",
+    "    for row in header+results:\n",
+    "        writer.writerow(row)\n",
+    "\n",
+    "print(f\"Data has been written to {filename}\")"
+   ]
   },
   {
    "cell_type": "code",
