--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -409,7 +409,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip3 install llama-index-llms-you"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.retrievers.you import YouRetriever\n",
+    "YouRetrieve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RetrieverQueryEngine?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.llms.you import You\n",
+    "You?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RetrieverQueryEngine.from_args?"
+   ]
   },
   {
    "cell_type": "code",
@@ -422,47 +462,80 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "from llama_index.llms.openai import OpenAI as LOpenAI\n",
+    "from llama_index.retrievers.you import YouRetriever\n",
+    "from llama_index.core.query_engine import RetrieverQueryEngine\n",
+    "from llama_index.core import Settings\n",
     "\n",
     "model_name, ctx_len = \"gpt-4o-2024-08-06\", 128000\n",
+    "you_api_key = \"\" or os.environ[\"YDC_API_KEY\"]\n",
+    "\n",
     "openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "os.environ[\"OPENAI_API_KEY\"] = openai_key\n",
-    "system_prompt = f\"\"\"You are gathering information on the top asset management firms in the world. \n",
-    "This information will be put in a spreadsheet. \n",
-    "You need to know the CEO of each firm.\n",
-    "Return the company name and CEO name in the following format: \"Company: CEO\".\n",
-    "\"\"\"\n",
-    "print(f\"Using OpenAI {model_name}...\")\n",
-    "llm = LOpenAI(model=model_name, max_tokens=8000, system_prompt=system_prompt)\n",
+    "\n",
+    "# system_prompt = f\"\"\"You are gathering information on the top asset management firms in the world. \n",
+    "# This information will be put in a spreadsheet. \n",
+    "# You need to know the CEO of each firm.\n",
+    "# Return the company name and CEO name in the following format: \"Company: CEO\".\n",
+    "# \"\"\"\n",
+    "# print(f\"Using OpenAI {model_name}...\")\n",
+    "llm = LOpenAI(model=model_name, max_tokens=8000)\n",
+    "# Settings.llm = llm\n",
+    "\n",
+    "retriever = YouRetriever(api_key=you_api_key, endpoint=\"search\", num_web_results=10)\n",
+    "query_engine = RetrieverQueryEngine.from_args(retriever)\n",
+    "\n",
     "ceos=[]\n",
     "coos=[]\n",
     "cios=[]\n",
     "presidents=[]\n",
     "execs = [ceos, coos, cios, presidents]\n",
-    "exec_strs = [\"Chief Executive Officer\", \"Chief Operating Officer\", \"Chief Investment Officer\", \"President\"]\n",
+    "exec_strs = [\"Chief Executive Officer\", \"Chief Operating Officer\", \"Chief Investment Officer\", \"President\", \"Performance\", \"Key Funds\", \"Assets Under Management (AUM)\", \"Primary Address\"]\n",
     "results = []\n",
     "\n",
     "for i,a in enumerate(asset_list):\n",
     "    company_execs=[a]\n",
-    "    for exec_type, exec_str in zip(execs, exec_strs):\n",
-    "        system_prompt = f\"\"\"You are gathering information on the executives at top asset management firms. \n",
-    "        Only output the executive's name. \n",
-    "        Here are examples of properly formatted outputs: 'Larry Fink', 'Lori Heinel', 'James S. Anderson', 'Brian Carlin', 'Michael Sacks').\n",
-    "        \n",
+    "    for exec_type, exec_str in zip(execs, exec_strs[:4]):\n",
+    "        system_prompt = f\"\"\"\n",
     "        Who is the {exec_str} of {a}?\n",
+    "        Only return the name of the {exec_str}.\n",
     "        \"\"\"\n",
-    "        response = llm.complete(system_prompt)\n",
+    "        response = query_engine.query(system_prompt)\n",
+    "        # print(str(response))\n",
+    "        # response = llm.complete(system_prompt)\n",
     "        # response_check = llm.complete(f\"Extract and only output the name in the following text.\\n\\n{response.text}\")\n",
-    "        company_execs.append(response.text)\n",
+    "        company_execs.append(response.response)\n",
     "        \n",
-    "    # if i==10:\n",
-    "    #     raise ValueError(\"Stop here.\")\n",
-    "    # else:\n",
-    "    #     print(company_execs)\n",
-    "    if i%50==0:\n",
-    "        print(f\"{i} {company_execs}...\")\n",
-    "    results.append(company_execs)\n",
-    "    \n",
-    "header=[[\"Company Name\"]+[\"Chief Executive Officer\", \"Chief Operating Officer\", \"Chief Investment Officer\", \"President\"]]\n",
+    "    # if i%50==0:\n",
+    "        # print(f\"{i} {company_execs}...\")\n",
+    "    # 10-year return: 13.5%\n",
+    "    return_prompt=f\"\"\"What is the 10-year return for {a}? Return the percentage in this format: \"10-year return: 13.5%\".\"\"\"\n",
+    "    company_execs.append(query_engine.query(return_prompt).response)\n",
+    "    funds_prompt = f\"\"\"What are the key funds for {a}? Only return the names of the funds.\"\"\"\n",
+    "    company_execs.append(query_engine.query(funds_prompt).response)\n",
+    "    aum_prompt = f\"\"\"What is the total Assets Under Management (AUM) for {a}? Only return the amount in USD.\"\"\"\n",
+    "    company_execs.append(query_engine.query(aum_prompt).response)\n",
+    "    address_prompt = f\"\"\"What is the primary address for {a}? Only return the address.\"\"\"\n",
+    "    company_execs.append(query_engine.query(address_prompt).response)\n",
+    "    results.append(company_execs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "header=[\"Company Name\"]+exec_strs\n",
     "bads=0\n",
     "for r in results:\n",
     "    for elem in r:\n",
