free proxies suck

--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -740,37 +740,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up ollama\n",
+    "!apt-get update && apt-get install tmux vim -y\n",
+    "!pip3 install --ignore-installed llama-index llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-utils-workflow llama-index-readers-file llama-index-retrievers-you\n",
+    "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv graspologic fpdf2\n",
+    "!pip3 install flash-attn --no-build-isolation\n",
+    "!curl -fsSL https://ollama.com/install.sh | sh\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip3 install free-proxy fake-useragent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import urllib, requests, random, time\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "from fp.fp import FreeProxy\n",
+    "from fake_useragent import UserAgent\n",
     "\n",
     "\n",
-    "def extract_proxies(html):\n",
-    "    soup = BeautifulSoup(html, 'html.parser')\n",
-    "    text = soup.get_text()\n",
+    "# def extract_proxies(html):\n",
+    "#     soup = BeautifulSoup(html, 'html.parser')\n",
+    "#     text = soup.get_text()\n",
     "    \n",
-    "    # Regular expression to match IP addresses and ports\n",
-    "    proxy_pattern = re.compile(r'\\b(?:[0-9]{1,3}\\.){3}[0-9]{1,3}:[0-9]{1,5}\\b')\n",
-    "    proxies = proxy_pattern.findall(text)\n",
+    "#     # Regular expression to match IP addresses and ports\n",
+    "#     proxy_pattern = re.compile(r'\\b(?:[0-9]{1,3}\\.){3}[0-9]{1,3}:[0-9]{1,5}\\b')\n",
+    "#     proxies = proxy_pattern.findall(text)\n",
     "    \n",
-    "    return proxies\n",
+    "#     return proxies\n",
     "\n",
-    "def fetch_proxies():\n",
-    "    url = \"https://free-proxy-list.net/\"\n",
-    "    response = requests.get(url)\n",
-    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "    ips_ports = extract_proxies(soup.text)\n",
-    "    proxies = []\n",
+    "# def fetch_proxies():\n",
+    "#     url = \"https://free-proxy-list.net/\"\n",
+    "#     response = requests.get(url)\n",
+    "#     soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "#     ips_ports = extract_proxies(soup.text)\n",
+    "#     proxies = []\n",
     "\n",
-    "    for ip_port in ips_ports:\n",
-    "        proxy = f\"http://{ip_port}\"\n",
-    "        proxies.append(proxy)\n",
+    "#     for ip_port in ips_ports:\n",
+    "#         proxy = f\"http://{ip_port}\"\n",
+    "#         proxies.append(proxy)\n",
     "    \n",
-    "    return proxies\n",
+    "#     return proxies\n",
     "\n",
     "\n",
     "class GoogleSearch:\n",
@@ -782,26 +849,17 @@
     "        self.headers = {\n",
     "            \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3538.102 Safari/537.36\"\n",
     "        }\n",
-    "        # self.proxies = fetch_proxies()\n",
-    "        self.proxies = ['http://194.182.178.90:3128']\n",
-    "        # self.user_agents = [\n",
-    "        #     \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3538.102 Safari/537.36\",\n",
-    "        #     \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36\",\n",
-    "        #     \"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:65.0) Gecko/20100101 Firefox/65.0\",\n",
-    "        #     \"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:65.0) Gecko/20100101 Firefox/65.0\",\n",
-    "        #     'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36'\n",
-    "        # ]\n",
-    "        # self.headers = {\n",
-    "        #     \"User-Agent\": random.choice(self.user_agents)\n",
-    "        # }\n",
+    "        self.ua = UserAgent()\n",
     "        self.links = self.get_initial_links()\n",
     "        self.all_page_data = self.all_pages()\n",
     "\n",
     "    def get_random_user_agent(self):\n",
-    "        return random.choice(self.user_agents)\n",
+    "        self.headers[\"User-Agent\"] = self.ua.random\n",
+    "        return None\n",
     "    \n",
     "    def get_random_proxy(self):\n",
-    "        return random.choice(self.proxies)\n",
+    "        # return FreeProxy(https=True, google=True, timeout=1.0).get(repeat=False) country_id=['US', 'GB', 'CA', 'AU'], \n",
+    "        return FreeProxy(google=True, https=True, timeout=20.0).get()\n",
     "\n",
     "    def clean_urls(self, anchors: list[str]) -> list[str]:\n",
     "\n",
@@ -822,8 +880,9 @@
     "\n",
     "    def read_url_page(self, url: str) -> str:\n",
     "        proxy = self.get_random_proxy()\n",
-    "        # response = requests.get(url, headers=self.headers, proxies={\"http\": proxy, \"https\": proxy})\n",
-    "        response = requests.get(url, headers=self.headers)\n",
+    "        self.get_random_user_agent()\n",
+    "        # response = requests.get(url, headers=self.headers)\n",
+    "        response = requests.get(url, headers=self.headers, proxies={\"https\": proxy, \"http\": proxy})\n",
     "        response.raise_for_status()\n",
     "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
     "        return soup.get_text(strip=True)\n",
@@ -834,17 +893,37 @@
     "        \"\"\"\n",
     "        # print(\"Searching Google...\")\n",
     "        proxy = self.get_random_proxy()\n",
-    "        print(self.headers)\n",
+    "        self.get_random_user_agent()\n",
+    "        response = requests.get(self.URL, headers=self.headers, proxies={\"https\": proxy, \"http\": proxy}) #\"https\": proxy, \n",
+    "        # response = requests.get(self.URL, headers=self.headers)\n",
+    "        # Print the response status and content for debugging\n",
     "        print(proxy)\n",
-    "        response = requests.get(self.URL, headers=self.headers)\n",
-    "        # response = requests.get(self.URL, headers=self.headers, proxies={\"http\": proxy, \"https\": proxy})\n",
-    "        # time.sleep(random.uniform(1, 5))\n",
+    "        code429 = 0\n",
+    "        while True:\n",
+    "            if response.status_code in [429, 400]:\n",
+    "                print(f\"Got a {response.status_code}. Retrying.\")\n",
+    "                retry_after = int(response.headers.get(\"Retry-After\", 4))  # Default to 60 seconds if not provided\n",
+    "                print(f\"Rate limited. Retrying after {retry_after} seconds.\")\n",
+    "                time.sleep(retry_after)\n",
+    "                proxy = self.get_random_proxy()\n",
+    "                print(proxy)\n",
+    "                self.get_random_user_agent()\n",
+    "                response = requests.get(self.URL, headers=self.headers, proxies={\"https\": proxy, \"http\": proxy}) #\"https\": proxy, \n",
+    "                code429 += 1\n",
+    "                if code429 > 5:\n",
+    "                    print(\"Too many 429s. Exiting.\", response.status_code)\n",
+    "                    break\n",
+    "            else:\n",
+    "                print(\"Finally got through\", response.status_code)\n",
+    "                break\n",
+    "\n",
     "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "        print(soup)\n",
     "        anchors = soup.find_all(\"a\", href=True)\n",
     "        return self.clean_urls(anchors)\n",
     "\n",
     "    def all_pages(self) -> list[tuple[str, str]]:\n",
-    "\n",
+    "        print(self.links)\n",
     "        data: list[tuple[str, str]] = []\n",
     "        with ThreadPoolExecutor(max_workers=4) as executor:\n",
     "\n",
@@ -865,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,12 +1066,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "page_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'67.43.228.254:2679'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "page_data"
+    "FreeProxy(https=True, google=True, country_id=['US', 'GB', 'CA', 'AU'], timeout=2.0).get(repeat=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
